--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,185 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>PXCVBE - Youtube Downloader</title>
         <script src="https://cdn.tailwindcss.com"></script>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style.css" />
     </head>
-    <body>
-        
+    <body class="bg-gradient-to-br from-red-50 to-pink-50 min-h-screen">
+        <div class="container mx-auto px-4 py-12">
+            <div class="max-w-3xl mx-auto">
+                <!-- Header -->
+                <div class="text-center mb-8">
+                    <h1 class="text-4xl font-bold text-gray-800 mb-2">
+                        ▶️ Unduh Video YouTube
+                    </h1>
+                    <p class="text-gray-600">
+                        Download video YouTube dengan Gampang & Konversi video
+                        ke MP4 atau MP3 dengan kualitas terbaik.
+                    </p>
+                </div>
+
+                <!-- API Status -->
+                <div class="bg-white rounded-lg shadow-md p-4 mb-6">
+                    <div class="flex items-center justify-between">
+                        <div class="flex items-center gap-2">
+                            <div
+                                id="apiStatus"
+                                class="w-3 h-3 rounded-full bg-gray-400"
+                            ></div>
+                            <span class="text-sm font-medium text-gray-700"
+                                >Status API:</span
+                            >
+                            <span
+                                id="apiStatusText"
+                                class="text-sm text-gray-600"
+                                >Checking...</span
+                            >
+                        </div>
+                        <button
+                            onclick="checkApiHealth()"
+                            class="text-sm text-blue-600 hover:text-blue-800"
+                        >
+                            ↻ Refresh
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Main Card -->
+                <div class="bg-white rounded-2xl shadow-xl p-8">
+                    <!-- Input Section -->
+                    <div class="mb-6">
+                        <label class="block text-gray-700 font-semibold mb-2">
+                            URL Video YouTube
+                        </label>
+                        <div class="flex gap-2">
+                            <input
+                                type="text"
+                                id="videoUrl"
+                                placeholder="https://www.youtube.com/watch?v=..."
+                                class="flex-1 px-4 py-3 border-2 border-gray-300 rounded-lg focus:border-red-500 focus:outline-none transition"
+                            />
+                            <button
+                                id="fetchBtn"
+                                class="bg-red-600 hover:bg-red-700 text-white px-6 py-3 rounded-lg font-semibold transition disabled:bg-gray-400 disabled:cursor-not-allowed"
+                            >
+                                Ambil Info
+                            </button>
+                        </div>
+                    </div>
+
+                    <!-- Loading -->
+                    <div id="loading" class="hidden text-center py-8">
+                        <div
+                            class="inline-block w-12 h-12 border-4 border-red-600 border-t-transparent rounded-full animate-spin"
+                        ></div>
+                        <p class="text-gray-600 mt-4" id="loadingText">
+                            Lagi ngambil informasi video...
+                        </p>
+                    </div>
+
+                    <!-- Error Message -->
+                    <div
+                        id="error"
+                        class="hidden bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded-lg mb-4"
+                    >
+                        <span id="errorMsg"></span>
+                    </div>
+
+                    <!-- Success Message -->
+                    <div
+                        id="success"
+                        class="hidden bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded-lg mb-4"
+                    >
+                        <span id="successMsg"></span>
+                    </div>
+
+                    <!-- Video Info -->
+                    <div id="videoInfo" class="hidden">
+                        <div class="bg-gray-50 rounded-lg p-6 mb-6">
+                            <div class="flex gap-4">
+                                <img
+                                    id="thumbnail"
+                                    src=""
+                                    alt="Thumbnail"
+                                    class="w-40 h-28 object-cover rounded-lg shadow-md"
+                                />
+                                <div class="flex-1">
+                                    <h3
+                                        id="videoTitle"
+                                        class="font-bold text-lg text-gray-800 mb-2"
+                                    ></h3>
+                                    <p class="text-gray-600 text-sm mb-1">
+                                        <span class="font-semibold"
+                                            >Channel:</span
+                                        >
+                                        <span id="videoAuthor"></span>
+                                    </p>
+                                    <p class="text-gray-600 text-sm mb-1">
+                                        <span class="font-semibold"
+                                            >Duration:</span
+                                        >
+                                        <span id="videoDuration"></span>
+                                    </p>
+                                    <p class="text-gray-600 text-sm">
+                                        <span class="font-semibold"
+                                            >Views:</span
+                                        >
+                                        <span id="videoViews"></span>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Download Options -->
+                        <div class="space-y-4">
+                            <h4 class="font-semibold text-gray-700 mb-3">
+                                Pilih Format Download:
+                            </h4>
+
+                            <!-- Quick Download Buttons -->
+                            <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
+                                <button
+                                    onclick="downloadQuick('best')"
+                                    class="bg-gradient-to-r from-red-500 to-pink-500 hover:from-red-600 hover:to-pink-600 text-white px-6 py-4 rounded-lg font-semibold transition transform hover:scale-105 shadow-md"
+                                >
+                                    📹 Download Best Quality (MP4)
+                                </button>
+                                <button
+                                    onclick="downloadAudio()"
+                                    class="bg-gradient-to-r from-purple-500 to-indigo-500 hover:from-purple-600 hover:to-indigo-600 text-white px-6 py-4 rounded-lg font-semibold transition transform hover:scale-105 shadow-md"
+                                >
+                                    🎵 Download Audio (MP3)
+                                </button>
+                            </div>
+
+                            <!-- Advanced Options -->
+                            <details class="bg-gray-50 rounded-lg p-4">
+                                <summary
+                                    class="font-semibold text-gray-700 cursor-pointer"
+                                >
+                                    📊 Advanced Options (Custom Quality)
+                                </summary>
+                                <div id="formatsList" class="mt-4 space-y-2">
+                                    <p class="text-gray-600 text-sm">
+                                        Loading formats...
+                                    </p>
+                                </div>
+                            </details>
+                        </div>
+                    </div>
+
+                    <!-- Info -->
+                    <div class="mt-6 text-center text-sm text-gray-500">
+                        <p>
+                            ⚠️ Catatan: Download mungkin membutuhkan waktu
+                            tergantung ukuran file.
+                        </p>
+                        <p class="mt-1">
+                            Pastikan Anda memiliki hak untuk mengunduh video
+                            yang Anda pilih.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
