Remove copyrights message

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>PXCVBE - Youtube Downloader</title>
         <script src="https://cdn.tailwindcss.com"></script>
+        <script type="text/javascript" src="js/main.js"></script>
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body class="bg-gradient-to-br from-red-50 to-pink-50 min-h-screen">
@@ -176,10 +177,6 @@
                         <p>
                             ⚠️ Catatan: Download mungkin membutuhkan waktu
                             tergantung ukuran file.
-                        </p>
-                        <p class="mt-1">
-                            Pastikan Anda memiliki hak untuk mengunduh video
-                            yang Anda pilih.
                         </p>
                     </div>
                 </div>
