--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>PXCVBE - Youtube Downloader</title>
         <script src="https://cdn.tailwindcss.com"></script>
-        <script type="text/javascript" src="js/main.js"></script>
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body class="bg-gradient-to-br from-red-50 to-pink-50 min-h-screen">
@@ -182,5 +181,8 @@
                 </div>
             </div>
         </div>
+
+        <!-- LOAD JS FILE -->
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
